--- a/configs/fvdb_example_data/train_diffusion_16x16x16_dense.yaml
+++ b/configs/fvdb_example_data/train_diffusion_16x16x16_dense.yaml
@@ -5,4 +5,9 @@ include_configs:
 name: 'fvdb_example_data/diffusion_dense'
 
 vae_config: "configs/fvdb_example_data/train_vae_16x16x16_dense.yaml"
-vae_checkpoint: "checkpoints/fvdb_example_data/coarse_vae/last.ckpt"
+vae_checkpoint: "/root/SCube/checkpoints/fvdb_example_data/coarse_vae/last.ckpt"
+
+network:
+  diffuser:
+    model_channels: 192
+    num_res_blocks: 1
