--- a/configs/waymo_scube_test/train_gsm_unet3d_view3.yaml
+++ b/configs/waymo_scube_test/train_gsm_unet3d_view3.yaml
@@ -7,23 +7,26 @@ name: 'scene-recon/waymo_wds'
 
 # data. we select (almost) static scenes for GSM training
 train_kwargs:
-  wds_scene_list_file: "/root/datasets/waymo_split/official_train_static_scene.json" 
+  wds_scene_list_file: "/root/datasets/waymo_split/waymo_test.json" 
 val_kwargs:
-  wds_scene_list_file: "/root/datasets/waymo_split/official_val_static_scene.json"
+  wds_scene_list_file: "/root/datasets/waymo_split/waymo_test.json"
 test_kwargs:
-  wds_scene_list_file: "/root/datasets/waymo_split/official_val_static_scene.json"
+  wds_scene_list_file: "/root/datasets/waymo_split/waymo_test.json"
 
 _attr_subfolders: ['image_front', 'image_front_left', 'image_front_right', 
                    'pose', 'intrinsic', 
                    'skymask_front', 'skymask_front_left', 'skymask_front_right',
                    'dynamic_object_transformation', 'dynamic_object_points_canonical', 
-                  #  'pc_voxelsize_01',
+                   'pc_voxelsize_01',
                    ]
 _fvdb_grid_type: 'vs01'
-_input_slect_ids: [0,1,2]
+# _input_slect_ids: [0,1,2]
+_input_slect_ids: [0,1]
 _input_frame_offsets: [0]
-_sup_slect_ids: [0,1,2]
-_sup_frame_offsets: [0,7,15,22]
+# _sup_slect_ids: [0,1,2]
+_sup_slect_ids: [0,1]
+# _sup_frame_offsets: [0,7,15,22]
+_sup_frame_offsets: [0]
 _n_image_per_iter_sup: 8
 grid_crop_bbox_min: [0, -32, -6.4] # smaller to avoid OOM
 grid_crop_bbox_max: [81.92, 32, 19.2] # smaller to avoid OOM
