--- a/configs/train/diffusion/diffusion_128x128x128_sparse.yaml
+++ b/configs/train/diffusion/diffusion_128x128x128_sparse.yaml
@@ -4,7 +4,7 @@ vae_config: ""
 vae_checkpoint: ""
 
 use_pos_embed_world: true
-log_image: false # upsampler model does not log image for speed up
+log_image: true # upsampler model does not log image for speed up
 
 voxel_size: 0.0025
 resolution: 512
